💬 Collapse > Correcting padding

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -35,10 +35,11 @@ $duration-time: 1s;
         transform: translateY(-15vh);
         opacity: 0;
         z-index: 1;
-        font-size: 1rem;
+        font-size: 1.3vw;
         margin: 0;
         padding-top: 1.5vh;
         padding-left: 3%;
+        padding-bottom: 3%;
         display: flex;
         align-items: flex-start;
         flex-direction: column;
@@ -133,6 +134,7 @@ $duration-time: 1s;
 
         p {
             width: 95%;
+            font-size: 3.5vw;
             
 
             span{
